Add all countries with school data end-point
